--- a/Collar Radio.ioc
+++ b/Collar Radio.ioc
@@ -151,25 +151,26 @@ Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G070KBTx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
-NVIC.ADC1_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true\:true
+MxCube.Version=6.14.1
+MxDb.Version=DB.6.0.141
+NVIC.ADC1_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.EXTI0_1_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true\:true
-NVIC.EXTI2_3_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true\:true
-NVIC.EXTI4_15_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.EXTI0_1_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI2_3_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI4_15_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.I2C2_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true\:true
+NVIC.I2C2_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:false\:false\:false
+NVIC.RTC_TAMP_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:false
-NVIC.USART1_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true\:true
 PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA10.GPIO_Label=INT
 PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -283,6 +284,7 @@ PC6.Signal=GPXTI6
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -346,7 +348,9 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VDD_VALUE=3.2
 RTC.Format=RTC_FORMAT_BIN
-RTC.IPParameters=Format
+RTC.IPParameters=Format,WakeUpClock-WakeUp,WakeUpCounter-WakeUp
+RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
+RTC.WakeUpCounter-WakeUp=299
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
