--- a/Collar Radio.ioc
+++ b/Collar Radio.ioc
@@ -90,8 +90,8 @@ FREERTOS.BinarySemaphores01=mutex_i2c_idle,Static,mutex_i2c_idleControlBlock,Ava
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=1
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,BinarySemaphores01,HEAP_NUMBER,configMINIMAL_STACK_SIZE,Queues01
-FREERTOS.Queues01=Button_Queue,32,uint16_t,0,Static,Button_QueueBuffer,Button_QueueControlBlock;Notification_Queue,16,uint8_t,0,Static,NotificationQueueBuffer,NotificationQueueControlBlock
-FREERTOS.Tasks01=SysShutdown,24,128,SysShutdown_Task,As weak,NULL,Static,SysShutdownBuffer,SysShutdownControlBlock;Menu,24,512,Menu_Task,As weak,NULL,Static,MenuBuffer,MenuControlBlock;ADC_Update,16,64,ADC_Task,As weak,NULL,Static,ADC_UpdateBuffer,ADC_UpdateControlBlock;PressureSensor,16,64,AirPressure_Task,As weak,NULL,Static,PressureSensorBuffer,PressureSensorControlBlock;ButtonTask,40,64,Button_Handle,As weak,NULL,Static,ButtonTaskBuffer,ButtonTaskControlBlock;Notification,24,128,Notification_Task,As weak,NULL,Static,NotificationBuffer,NotificationControlBlock
+FREERTOS.Queues01=Button_Queue,32,uint16_t,0,Static,Button_QueueBuffer,Button_QueueControlBlock;Notification_Queue,16,const char*,0,Static,NotificationQueueBuffer,NotificationQueueControlBlock
+FREERTOS.Tasks01=SysShutdown,24,128,SysShutdown_Task,As weak,NULL,Static,SysShutdownBuffer,SysShutdownControlBlock;Menu,24,512,Menu_Task,As weak,NULL,Static,MenuBuffer,MenuControlBlock;ADC_Update,16,64,ADC_Task,As weak,NULL,Static,ADC_UpdateBuffer,ADC_UpdateControlBlock;PressureSensor,16,64,AirPressure_Task,As weak,NULL,Static,PressureSensorBuffer,PressureSensorControlBlock;ButtonTask,40,64,Button_Handle,As weak,NULL,Static,ButtonTaskBuffer,ButtonTaskControlBlock;Notification,24,128,Notification_Task,As weak,NULL,Static,NotificationBuffer,NotificationControlBlock;SC7A20,24,64,SC7A20_Task,As weak,NULL,Static,SC7A20Buffer,SC7A20ControlBlock
 FREERTOS.configENABLE_FPU=0
 FREERTOS.configMINIMAL_STACK_SIZE=64
 FREERTOS.configTOTAL_HEAP_SIZE=512
